Bad Smells found:

+ Temporary field  -> Treatment: extract class - created seperate classes for Book, CD, DVD
                    which inhareted from Article

+ switch-case  -> Treatment:



-fixed code through "Inspect Code"